--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/PrivateShareViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/PrivateShareViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +26,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kEE-p6-0hz" customClass="DismissKeyboardScrollView" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="49" width="414" height="729"/>
+                    <rect key="frame" x="0.0" y="49" width="414" height="763"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fFh-DE-Z2K">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="729"/>
@@ -40,11 +40,11 @@
                     </constraints>
                 </scrollView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2mQ-Dg-Efm">
-                    <rect key="frame" x="0.0" y="114" width="414" height="656"/>
+                    <rect key="frame" x="0.0" y="114" width="414" height="698"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ui7-rz-0Ps">
-                    <rect key="frame" x="0.0" y="770" width="414" height="126"/>
+                    <rect key="frame" x="0.0" y="812" width="414" height="84"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r31-rU-1Pz" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="117" y="20" width="180" height="44"/>
@@ -60,8 +60,9 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
+                        <constraint firstItem="r31-rU-1Pz" firstAttribute="centerY" secondItem="ui7-rz-0Ps" secondAttribute="centerY" id="6eu-D9-XZy"/>
                         <constraint firstItem="r31-rU-1Pz" firstAttribute="centerX" secondItem="ui7-rz-0Ps" secondAttribute="centerX" id="fYB-YU-4AK"/>
-                        <constraint firstItem="r31-rU-1Pz" firstAttribute="top" secondItem="ui7-rz-0Ps" secondAttribute="top" constant="20" id="ikd-X9-mSo"/>
+                        <constraint firstAttribute="height" constant="84" id="hlr-5C-PvM"/>
                     </constraints>
                 </view>
             </subviews>
@@ -73,13 +74,13 @@
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="F5Y-cB-Q0t"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="Obk-jm-2Q1"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kEE-p6-0hz" secondAttribute="trailing" id="TUk-Ov-bMj"/>
+                <constraint firstAttribute="bottom" secondItem="ui7-rz-0Ps" secondAttribute="bottom" id="dqH-04-CCH"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="top" secondItem="kEE-p6-0hz" secondAttribute="bottom" id="eEQ-CW-4Hs"/>
                 <constraint firstItem="kEE-p6-0hz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eTY-ha-tW3"/>
                 <constraint firstItem="kEE-p6-0hz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="f6r-Lt-9Ox"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jY5-oH-u7v"/>
                 <constraint firstItem="2mQ-Dg-Efm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jmW-4B-Sxk"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="top" secondItem="2mQ-Dg-Efm" secondAttribute="bottom" id="mAk-tO-3Pu"/>
-                <constraint firstItem="ui7-rz-0Ps" firstAttribute="topMargin" secondItem="fnl-2z-Ty3" secondAttribute="bottom" constant="-84" id="pCN-mt-rTH"/>
                 <constraint firstItem="fFh-DE-Z2K" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="zoy-ry-Sko"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="105.80357142857143"/>
