--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/SharingInfo/FileInfoShareView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/SharingInfo/FileInfoShareView.xib
@@ -11,11 +11,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FileInfoShareView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="161"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="145"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNg-u4-bc2">
-                    <rect key="frame" x="20" y="16" width="374" height="15"/>
+                    <rect key="frame" x="20" y="0.0" width="374" height="15"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="9BO-OI-Yvs"/>
                     </constraints>
@@ -24,14 +24,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZlV-IR-S5u">
-                    <rect key="frame" x="0.0" y="160" width="414" height="1"/>
+                    <rect key="frame" x="0.0" y="144" width="414" height="1"/>
                     <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Gwp-q7-fpW"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rkc-vj-8Hh">
-                    <rect key="frame" x="20" y="46" width="374" height="18"/>
+                    <rect key="frame" x="20" y="30" width="374" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="18" id="ufD-6w-RQa"/>
                     </constraints>
@@ -40,7 +40,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6Im-ez-OTx">
-                    <rect key="frame" x="16" y="78" width="353" height="67"/>
+                    <rect key="frame" x="16" y="62" width="353" height="67"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="67" id="pOD-Jt-52r"/>
@@ -53,7 +53,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="snf-Ja-seM">
-                    <rect key="frame" x="369" y="78" width="45" height="45"/>
+                    <rect key="frame" x="369" y="62" width="45" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="Gkx-Q2-zTO"/>
                         <constraint firstAttribute="width" constant="45" id="UaF-IU-SUZ"/>
@@ -69,7 +69,7 @@
                 <constraint firstItem="6Im-ez-OTx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="26P-ZU-hVz"/>
                 <constraint firstAttribute="trailing" secondItem="Rkc-vj-8Hh" secondAttribute="trailing" constant="20" id="4dP-5S-tGR"/>
                 <constraint firstItem="6Im-ez-OTx" firstAttribute="top" secondItem="Rkc-vj-8Hh" secondAttribute="bottom" constant="14" id="9Q8-uL-zpo"/>
-                <constraint firstItem="NNg-u4-bc2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="CP9-Pu-tK9"/>
+                <constraint firstItem="NNg-u4-bc2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="CP9-Pu-tK9"/>
                 <constraint firstItem="ZlV-IR-S5u" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KfZ-HC-zm6"/>
                 <constraint firstItem="NNg-u4-bc2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="OQi-B5-pwk"/>
                 <constraint firstAttribute="trailing" secondItem="snf-Ja-seM" secondAttribute="trailing" id="aUw-Yu-ZIA"/>
