--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/FileInfoViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FileInfoViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FileInfoViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="durationH" destination="OP5-ta-oD6" id="ppW-QC-IV5"/>
                 <outlet property="durationLabel" destination="Sws-0u-8c8" id="Wwj-ai-7tj"/>
@@ -19,6 +20,7 @@
                 <outlet property="folderSizeLabel" destination="6gm-iK-w9c" id="Pxl-61-Bvu"/>
                 <outlet property="folderSizeTitle" destination="qsp-jh-5I9" id="A7y-ca-mv1"/>
                 <outlet property="moreFileInfoLabel" destination="4aH-FR-8Sf" id="vcd-yw-9Rm"/>
+                <outlet property="shareInfoContainer" destination="HuT-32-Xnc" id="gsB-fa-heH"/>
                 <outlet property="takenDateLabel" destination="4t8-mh-2vG" id="32z-e4-Gg6"/>
                 <outlet property="takenDateTitle" destination="VnX-Ji-QDm" id="DTO-Yp-jeK"/>
                 <outlet property="uploadDateLabel" destination="boz-R0-aEv" id="sUe-yq-aaG"/>
@@ -74,7 +76,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsp-jh-5I9">
-                    <rect key="frame" x="22" y="142" width="281" height="22"/>
+                    <rect key="frame" x="22" y="129" width="281" height="22"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="22" id="PVw-0Q-l23"/>
                     </constraints>
@@ -83,7 +85,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6gm-iK-w9c">
-                    <rect key="frame" x="311" y="142" width="42" height="22"/>
+                    <rect key="frame" x="311" y="129" width="42" height="22"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="22" id="QG7-Rl-GuS"/>
                     </constraints>
@@ -92,7 +94,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Au-NX-n16">
-                    <rect key="frame" x="22" y="164" width="281" height="22"/>
+                    <rect key="frame" x="22" y="151" width="281" height="22"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="22" id="OP5-ta-oD6"/>
                     </constraints>
@@ -101,13 +103,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sws-0u-8c8">
-                    <rect key="frame" x="311" y="164" width="42" height="22"/>
+                    <rect key="frame" x="311" y="151" width="42" height="22"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4aH-FR-8Sf">
-                    <rect key="frame" x="22" y="186" width="331" height="0.0"/>
+                    <rect key="frame" x="22" y="173" width="331" height="0.0"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" id="BOF-Ap-bfP"/>
                     </constraints>
@@ -116,14 +118,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Of7-IW-hVl">
-                    <rect key="frame" x="7" y="196" width="361" height="1"/>
+                    <rect key="frame" x="7" y="183" width="361" height="1"/>
                     <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="3jl-8u-xd9"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m5X-lA-kgv">
-                    <rect key="frame" x="22" y="213" width="281" height="21"/>
+                    <rect key="frame" x="22" y="200" width="281" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="9Dm-YC-WzQ"/>
                     </constraints>
@@ -132,7 +134,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="boz-R0-aEv">
-                    <rect key="frame" x="311" y="213" width="42" height="21"/>
+                    <rect key="frame" x="311" y="200" width="42" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="syP-rB-fNQ"/>
                     </constraints>
@@ -141,7 +143,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VnX-Ji-QDm">
-                    <rect key="frame" x="22" y="234" width="281" height="21"/>
+                    <rect key="frame" x="22" y="221" width="281" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="iHi-aY-ThV"/>
                     </constraints>
@@ -150,7 +152,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4t8-mh-2vG">
-                    <rect key="frame" x="311" y="234" width="42" height="21"/>
+                    <rect key="frame" x="311" y="221" width="42" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="S22-8c-8Cc"/>
                     </constraints>
@@ -158,11 +160,28 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iW1-w5-Z3C">
+                    <rect key="frame" x="7" y="252" width="361" height="1"/>
+                    <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="Anv-Yl-xLd"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HuT-32-Xnc">
+                    <rect key="frame" x="0.0" y="269" width="375" height="145"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="145" id="UKt-ab-Gz6"/>
+                    </constraints>
+                </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="miw-2C-Mdw"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="zZh-Wh-hzn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="2zr-lg-B0d"/>
                 <constraint firstItem="4t8-mh-2vG" firstAttribute="leading" secondItem="VnX-Ji-QDm" secondAttribute="trailing" constant="8" id="3VP-Ly-SjX"/>
+                <constraint firstAttribute="trailing" secondItem="iW1-w5-Z3C" secondAttribute="trailing" constant="7" id="46g-Vl-FFI"/>
+                <constraint firstItem="miw-2C-Mdw" firstAttribute="trailing" secondItem="HuT-32-Xnc" secondAttribute="trailing" id="551-7N-fw2"/>
                 <constraint firstItem="VnX-Ji-QDm" firstAttribute="top" secondItem="m5X-lA-kgv" secondAttribute="bottom" id="5Aq-lS-mXo"/>
                 <constraint firstItem="5Au-NX-n16" firstAttribute="top" secondItem="qsp-jh-5I9" secondAttribute="bottom" id="5Vs-O0-LPU"/>
                 <constraint firstItem="kIx-nZ-QgV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="AMe-Gn-NR1"/>
@@ -174,7 +193,7 @@
                 <constraint firstItem="boz-R0-aEv" firstAttribute="top" secondItem="Of7-IW-hVl" secondAttribute="bottom" constant="16" id="Kdb-fr-BLQ"/>
                 <constraint firstItem="abs-2N-74x" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Ljh-zI-dTM"/>
                 <constraint firstAttribute="trailing" secondItem="hem-zh-lNu" secondAttribute="trailing" constant="7" id="MU0-cI-59R"/>
-                <constraint firstItem="6gm-iK-w9c" firstAttribute="top" secondItem="zZh-Wh-hzn" secondAttribute="bottom" constant="29" id="Mau-ng-ZWh"/>
+                <constraint firstItem="6gm-iK-w9c" firstAttribute="top" secondItem="zZh-Wh-hzn" secondAttribute="bottom" constant="16" id="Mau-ng-ZWh"/>
                 <constraint firstAttribute="trailing" secondItem="4aH-FR-8Sf" secondAttribute="trailing" constant="22" id="NRF-jS-Xkd"/>
                 <constraint firstItem="77o-rW-aKy" firstAttribute="top" secondItem="kIx-nZ-QgV" secondAttribute="bottom" constant="16" id="NYq-2Y-zwO"/>
                 <constraint firstItem="Sws-0u-8c8" firstAttribute="top" secondItem="6gm-iK-w9c" secondAttribute="bottom" id="OIE-vR-Hhh"/>
@@ -186,9 +205,11 @@
                 <constraint firstItem="m5X-lA-kgv" firstAttribute="top" secondItem="boz-R0-aEv" secondAttribute="top" id="XTV-KY-VPu"/>
                 <constraint firstItem="4aH-FR-8Sf" firstAttribute="top" secondItem="Sws-0u-8c8" secondAttribute="bottom" id="YTF-o1-RrV"/>
                 <constraint firstItem="hem-zh-lNu" firstAttribute="top" secondItem="77o-rW-aKy" secondAttribute="bottom" constant="12" id="Ybz-C7-BPK"/>
-                <constraint firstItem="qsp-jh-5I9" firstAttribute="top" secondItem="zZh-Wh-hzn" secondAttribute="bottom" constant="29" id="Ye6-f0-nFG"/>
+                <constraint firstItem="qsp-jh-5I9" firstAttribute="top" secondItem="zZh-Wh-hzn" secondAttribute="bottom" constant="16" id="Ye6-f0-nFG"/>
+                <constraint firstItem="HuT-32-Xnc" firstAttribute="leading" secondItem="miw-2C-Mdw" secondAttribute="leading" id="eY0-iC-mDV"/>
                 <constraint firstItem="6gm-iK-w9c" firstAttribute="leading" secondItem="qsp-jh-5I9" secondAttribute="trailing" constant="8" id="erM-Rm-WzX"/>
                 <constraint firstItem="5Au-NX-n16" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="f07-KX-WaE"/>
+                <constraint firstItem="iW1-w5-Z3C" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="7" id="ho5-8V-uHJ"/>
                 <constraint firstItem="Sws-0u-8c8" firstAttribute="height" secondItem="5Au-NX-n16" secondAttribute="height" id="jZk-E4-7ti"/>
                 <constraint firstItem="4t8-mh-2vG" firstAttribute="top" secondItem="VnX-Ji-QDm" secondAttribute="top" id="kkm-Pv-cej"/>
                 <constraint firstItem="Sws-0u-8c8" firstAttribute="leading" secondItem="5Au-NX-n16" secondAttribute="trailing" constant="8" id="mMe-xp-vTf"/>
@@ -200,15 +221,21 @@
                 <constraint firstItem="4t8-mh-2vG" firstAttribute="trailing" secondItem="boz-R0-aEv" secondAttribute="trailing" id="umh-rN-XMp"/>
                 <constraint firstItem="zZh-Wh-hzn" firstAttribute="top" secondItem="hem-zh-lNu" secondAttribute="bottom" constant="15" id="upl-1r-4Jr"/>
                 <constraint firstItem="Of7-IW-hVl" firstAttribute="top" secondItem="4aH-FR-8Sf" secondAttribute="bottom" constant="10" id="vDu-Rc-Dwd"/>
+                <constraint firstItem="HuT-32-Xnc" firstAttribute="top" secondItem="iW1-w5-Z3C" secondAttribute="bottom" constant="16" id="vEk-yl-aq0"/>
                 <constraint firstAttribute="bottom" secondItem="abs-2N-74x" secondAttribute="bottom" id="vN0-aO-aTN"/>
+                <constraint firstItem="iW1-w5-Z3C" firstAttribute="top" secondItem="VnX-Ji-QDm" secondAttribute="bottom" constant="10" id="xcW-8v-O1a"/>
                 <constraint firstItem="abs-2N-74x" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xeg-YY-l9p"/>
                 <constraint firstItem="m5X-lA-kgv" firstAttribute="leading" secondItem="VnX-Ji-QDm" secondAttribute="leading" id="ygX-Uv-lRM"/>
                 <constraint firstAttribute="trailing" secondItem="zZh-Wh-hzn" secondAttribute="trailing" constant="22" id="yyj-Gb-YTk"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <viewLayoutGuide key="safeArea" id="miw-2C-Mdw"/>
             <point key="canvasLocation" x="25.5" y="51.5"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
