--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/AccessList/PrivateShareAccessListCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/AccessList/PrivateShareAccessListCell.xib
@@ -17,8 +17,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Rt-Od-MyD">
-                        <rect key="frame" x="0.0" y="0.0" width="64" height="73"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Rt-Od-MyD">
+                        <rect key="frame" x="20" y="19" width="30" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="ky5-UX-Qlh"/>
+                            <constraint firstAttribute="height" constant="35" id="lHe-6E-r8o"/>
+                        </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="luM-t1-Kas">
                         <rect key="frame" x="64" y="13.5" width="183" height="46"/>
@@ -50,16 +54,15 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="luM-t1-Kas" secondAttribute="bottom" id="211-kF-dYv"/>
+                    <constraint firstItem="0Lt-dW-EcO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="2hH-r0-fcg"/>
+                    <constraint firstItem="0Rt-Od-MyD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="2tF-cY-FbN"/>
                     <constraint firstItem="0Lt-dW-EcO" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Hgc-gE-NZ7"/>
                     <constraint firstItem="0Rt-Od-MyD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Npy-Z3-W5m"/>
-                    <constraint firstItem="0Rt-Od-MyD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Oeh-z4-tKQ"/>
                     <constraint firstItem="luM-t1-Kas" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" id="PHm-Hh-gTt"/>
-                    <constraint firstAttribute="bottom" secondItem="0Rt-Od-MyD" secondAttribute="bottom" id="Phl-NC-Qfk"/>
                     <constraint firstItem="0Lt-dW-EcO" firstAttribute="leading" secondItem="luM-t1-Kas" secondAttribute="trailing" constant="8" id="Us6-42-fge"/>
                     <constraint firstAttribute="trailing" secondItem="0Lt-dW-EcO" secondAttribute="trailing" constant="19" id="cqZ-hX-6ME"/>
-                    <constraint firstItem="0Rt-Od-MyD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hMG-bH-98M"/>
+                    <constraint firstAttribute="bottom" secondItem="0Lt-dW-EcO" secondAttribute="bottom" constant="14" id="kxx-xT-Kca"/>
                     <constraint firstItem="luM-t1-Kas" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mhf-GB-YW0"/>
-                    <constraint firstItem="luM-t1-Kas" firstAttribute="leading" secondItem="0Rt-Od-MyD" secondAttribute="trailing" id="quE-F1-pdb"/>
                     <constraint firstItem="luM-t1-Kas" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="64" id="tEY-0X-ChO"/>
                 </constraints>
             </tableViewCellContentView>
